--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.min.css">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js" defer></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js" defer></script>
+    <script src="js/slick.min.js" defer></script>
+    <script src="js/script.js" defer></script>
     <title>Pulse</title>
 </head>
 
@@ -31,17 +36,17 @@
                 <div class="promo__icons">
                     <div class="promo__icon">
                         <img src="icons/time.png" alt="time">
-                        Время подбора:<br/>
+                        Время подбора:<br />
                         10 минут
                     </div>
                     <div class="promo__icon">
                         <img src="icons/cart.png" alt="cart">
-                        Бесплатная<br/>
+                        Бесплатная<br />
                         доставка
                     </div>
                     <div class="promo__icon">
                         <img src="icons/messages.png" alt="messages">
-                        Ответим на<br/>
+                        Ответим на<br />
                         все вопросы
                     </div>
                 </div>
@@ -60,17 +65,19 @@
                 <div class="benefit__icon">
                     <img src="icons/cup.png" alt="cup">
                     <div class="benefit__subtitle">Делимся опытом</div>
-                    Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+                    Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли
+                    Босфор, готовятся к соревнованиям по триатлону!
                 </div>
                 <div class="benefit__icon">
                     <img src="icons/heart.png" alt="heart">
                     <div class="benefit__subtitle">Заботимся о здоровье</div>
-                    Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
+                    Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам
+                    и Вашим близким!
                 </div>
                 <div class="benefit__icon">
                     <img src="icons/shoe.png" alt="shoe">
                     <div class="benefit__subtitle">Учим бегать</div>
-                    Помогаем с обучением правильной технике бега! 
+                    Помогаем с обучением правильной технике бега!
                     Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a>
                 </div>
             </div>
@@ -79,12 +86,12 @@
     <section class="consultation">
         <div class="container">
             <h2 class="title title_left">
-                Получите бесплатную консультацию<br/>
-                по подбору пульсометра 
+                Получите бесплатную консультацию<br />
+                по подбору пульсометра
             </h2>
             <div class="consultation__descr">
-                Просто заполните форму заявки <br/>
-                и мы перезвоним вам в течении 10 минут 
+                Просто заполните форму заявки <br />
+                и мы перезвоним вам в течении 10 минут
             </div>
             <form class="feed-form" action="#">
                 <input name="name" required type="text" placeholder="Ваше имя">
@@ -92,6 +99,21 @@
                 <input name="email" required type="email" placeholder="Ваш E-mail">
                 <button type="submit" class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
             </form>
+        </div>
+    </section>
+    <section class="carousel">
+        <div class="container">
+            <div class="carousel__inner">
+                <div>
+                    <img class="carousel__img" src="img/slide_1.jpg" alt="polar">
+                </div>
+                <div>
+                    <img class="carousel__img" src="img/slide_2.jpg" alt="polar">
+                </div>
+                <div>
+                    <img class="carousel__img" src="img/slide_3.jpg" alt="polar">
+                </div>
+            </div>
         </div>
     </section>
 </body>
