--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/tiny-slider.css">
     <link rel="stylesheet" href="css/style.min.css">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js" defer></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js" defer></script>
-    <script src="js/slick.min.js" defer></script>
+    <script src="js/tiny-slider.js" defer></script>
     <script src="js/script.js" defer></script>
     <title>Pulse</title>
 </head>
@@ -114,6 +112,12 @@
                     <img class="carousel__img" src="img/slide_3.jpg" alt="polar">
                 </div>
             </div>
+            <button type="button" class="prev" data-controls="prev" aria-controls="tns1">
+                    <img src="icons/left_arrow.png"/>
+            </button>
+            <button type="button" class="next" data-controls="next" aria-controls="tns1">
+                    <img src="icons/right_arrow.png"/>
+            </button>
         </div>
     </section>
 </body>
