catalog section and double-sided cards

--- a/src/index.html
+++ b/src/index.html
@@ -120,6 +120,163 @@
             </button>
         </div>
     </section>
+    <section class="catalog">
+        <div class="container">
+            <div class="title title_light">Каталог пульсометров</div>
+            <div class="catalog__tabs">
+                <div class="catalog__tab"><span>для фитнеса</span></div>
+                <div class="catalog__tab"><span>для бега</span></div>
+                <div class="catalog__tab"><span>для триатлона</span></div>
+            </div>
+            <div class="catalog__products">
+                <div class="card">
+                   <div class="card__wrapper">
+                        <div class="card__front-side">
+                            <img src="img/pulsometer.jpg" alt="pulsometer" class="card__img">
+                            <div class="card__title">Пульсометр Polar FT1</div>
+                            <div class="card__about">Для первых шагов в тренировках, 
+                                основанных на сердечном ритме
+                            </div>
+                            <div class="card__more">ПОДРОБНЕЕ</div>
+                        </div>
+                        <div class="card__back-side">
+                            <ul class="card__descr">
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            </ul>
+                            <div class="card__back">НАЗАД</div>
+                        </div>
+                   </div>
+                    <div class="card__divider"></div>
+                    <div class="card__buy">
+                        <div class="card__price">
+                            <div class="card__old-price">4 750 руб.</div>
+                            <div class="card__new-price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_buy">купить</button>
+                    </div>
+                </div>
+                <div class="card">
+                   <div class="card__wrapper">
+                        <div class="card__front-side">
+                            <img src="img/pulsometer.jpg" alt="pulsometer" class="card__img">
+                            <div class="card__title">Пульсометр Polar FT1</div>
+                            <div class="card__about">Для первых шагов в тренировках, 
+                                основанных на сердечном ритме
+                            </div>
+                            <div class="card__more">ПОДРОБНЕЕ</div>
+                        </div>
+                        <div class="card__back-side">
+                            <ul class="card__descr">
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            </ul>
+                            <div class="card__back">НАЗАД</div>
+                        </div>
+                   </div>
+                    <div class="card__divider"></div>
+                    <div class="card__buy">
+                        <div class="card__price">
+                            <div class="card__old-price">4 750 руб.</div>
+                            <div class="card__new-price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_buy">купить</button>
+                    </div>
+                </div>
+                <div class="card">
+                   <div class="card__wrapper">
+                        <div class="card__front-side">
+                            <img src="img/pulsometer.jpg" alt="pulsometer" class="card__img">
+                            <div class="card__title">Пульсометр Polar FT1</div>
+                            <div class="card__about">Для первых шагов в тренировках, 
+                                основанных на сердечном ритме
+                            </div>
+                            <div class="card__more">ПОДРОБНЕЕ</div>
+                        </div>
+                        <div class="card__back-side">
+                            <ul class="card__descr">
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            </ul>
+                            <div class="card__back">НАЗАД</div>
+                        </div>
+                   </div>
+                    <div class="card__divider"></div>
+                    <div class="card__buy">
+                        <div class="card__price">
+                            <div class="card__old-price">4 750 руб.</div>
+                            <div class="card__new-price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_buy">купить</button>
+                    </div>
+                </div>
+                <div class="card">
+                   <div class="card__wrapper">
+                        <div class="card__front-side">
+                            <img src="img/pulsometer.jpg" alt="pulsometer" class="card__img">
+                            <div class="card__title">Пульсометр Polar FT1</div>
+                            <div class="card__about">Для первых шагов в тренировках, 
+                                основанных на сердечном ритме
+                            </div>
+                            <div class="card__more">ПОДРОБНЕЕ</div>
+                        </div>
+                        <div class="card__back-side">
+                            <ul class="card__descr">
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            </ul>
+                            <div class="card__back">НАЗАД</div>
+                        </div>
+                   </div>
+                    <div class="card__divider"></div>
+                    <div class="card__buy">
+                        <div class="card__price">
+                            <div class="card__old-price">4 750 руб.</div>
+                            <div class="card__new-price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_buy">купить</button>
+                    </div>
+                </div>
+                <div class="card">
+                   <div class="card__wrapper">
+                        <div class="card__front-side">
+                            <img src="img/pulsometer.jpg" alt="pulsometer" class="card__img">
+                            <div class="card__title">Пульсометр Polar FT1</div>
+                            <div class="card__about">Для первых шагов в тренировках, 
+                                основанных на сердечном ритме
+                            </div>
+                            <div class="card__more">ПОДРОБНЕЕ</div>
+                        </div>
+                        <div class="card__back-side">
+                            <ul class="card__descr">
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            </ul>
+                            <div class="card__back">НАЗАД</div>
+                        </div>
+                   </div>
+                    <div class="card__divider"></div>
+                    <div class="card__buy">
+                        <div class="card__price">
+                            <div class="card__old-price">4 750 руб.</div>
+                            <div class="card__new-price">4 500 руб.</div>
+                        </div>
+                        <button class="button button_buy">купить</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
