--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="header__contacts">
                     <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
-                    <button class="button button_small">заказать звонок</button>
+                    <button class="button button_small" data-modal="consultation">заказать звонок</button>
                 </div>
             </header>
             <div class="promo__wrapper">
@@ -50,7 +50,7 @@
                         все вопросы
                     </div>
                 </div>
-                <button class="button button_big">заказать консультацию</button>
+                <button class="button button_big" data-modal="consultation">заказать консультацию</button>
                 <div class="promo__link">
                     или
                     <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
@@ -115,10 +115,10 @@
                 </div>
             </div>
             <button type="button" class="prev" data-controls="prev" aria-controls="tns1">
-                    <img src="icons/left_arrow.png"/>
+                <img src="icons/left_arrow.png" />
             </button>
             <button type="button" class="next" data-controls="next" aria-controls="tns1">
-                    <img src="icons/right_arrow.png"/>
+                <img src="icons/right_arrow.png" />
             </button>
         </div>
     </section>
@@ -131,12 +131,12 @@
                 <div class="catalog__tab" id="triathlon"><span>для триатлона</span></div>
             </div>
             <div class="catalog__products">
-                <div class="card card-fitness">
-                   <div class="card__wrapper">
+                <div class="card card_fitness">
+                    <div class="card__wrapper">
                         <div class="card__front-side">
                             <img src="img/pulsometer.jpg" alt="pulsometer" class="card__img">
                             <div class="card__title">Пульсометр Polar FT1</div>
-                            <div class="card__about">Для первых шагов в тренировках, 
+                            <div class="card__about">Для первых шагов в тренировках,
                                 основанных на сердечном ритме
                             </div>
                             <div class="card__more">ПОДРОБНЕЕ</div>
@@ -144,28 +144,29 @@
                         <div class="card__back-side">
                             <ul class="card__descr">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
+                                </li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                             </ul>
                             <div class="card__back">НАЗАД</div>
                         </div>
-                   </div>
+                    </div>
                     <div class="card__divider"></div>
                     <div class="card__buy">
                         <div class="card__price">
                             <div class="card__old-price">4 750 руб.</div>
                             <div class="card__new-price">4 500 руб.</div>
                         </div>
-                        <button class="button button_buy">купить</button>
+                        <button class="button button_buy" data-modal="order">купить</button>
                     </div>
                 </div>
-                <div class="card card-fitness">
-                   <div class="card__wrapper">
+                <div class="card card_fitness">
+                    <div class="card__wrapper">
                         <div class="card__front-side">
                             <img src="img/pulsometer.jpg" alt="pulsometer" class="card__img">
-                            <div class="card__title">Пульсометр Polar FT1</div>
-                            <div class="card__about">Для первых шагов в тренировках, 
+                            <div class="card__title">Пульсометр Suunto M2</div>
+                            <div class="card__about">Для первых шагов в тренировках,
                                 основанных на сердечном ритме
                             </div>
                             <div class="card__more">ПОДРОБНЕЕ</div>
@@ -173,28 +174,29 @@
                         <div class="card__back-side">
                             <ul class="card__descr">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
+                                </li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                             </ul>
                             <div class="card__back">НАЗАД</div>
                         </div>
-                   </div>
+                    </div>
                     <div class="card__divider"></div>
                     <div class="card__buy">
                         <div class="card__price">
                             <div class="card__old-price">4 750 руб.</div>
                             <div class="card__new-price">4 500 руб.</div>
                         </div>
-                        <button class="button button_buy">купить</button>
+                        <button class="button button_buy" data-modal="order">купить</button>
                     </div>
                 </div>
-                <div class="card card-run">
-                   <div class="card__wrapper">
+                <div class="card card_run">
+                    <div class="card__wrapper">
                         <div class="card__front-side">
                             <img src="img/pulsometer.jpg" alt="pulsometer" class="card__img">
                             <div class="card__title">Пульсометр Polar FT1</div>
-                            <div class="card__about">Для первых шагов в тренировках, 
+                            <div class="card__about">Для первых шагов в тренировках,
                                 основанных на сердечном ритме
                             </div>
                             <div class="card__more">ПОДРОБНЕЕ</div>
@@ -202,28 +204,29 @@
                         <div class="card__back-side">
                             <ul class="card__descr">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
+                                </li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                             </ul>
                             <div class="card__back">НАЗАД</div>
                         </div>
-                   </div>
+                    </div>
                     <div class="card__divider"></div>
                     <div class="card__buy">
                         <div class="card__price">
                             <div class="card__old-price">4 750 руб.</div>
                             <div class="card__new-price">4 500 руб.</div>
                         </div>
-                        <button class="button button_buy">купить</button>
+                        <button class="button button_buy" data-modal="order">купить</button>
                     </div>
                 </div>
-                <div class="card card-run">
-                   <div class="card__wrapper">
+                <div class="card card_run">
+                    <div class="card__wrapper">
                         <div class="card__front-side">
                             <img src="img/pulsometer.jpg" alt="pulsometer" class="card__img">
-                            <div class="card__title">Пульсометр Polar FT1</div>
-                            <div class="card__about">Для первых шагов в тренировках, 
+                            <div class="card__title">Пульсометр Suunto M2</div>
+                            <div class="card__about">Для первых шагов в тренировках,
                                 основанных на сердечном ритме
                             </div>
                             <div class="card__more">ПОДРОБНЕЕ</div>
@@ -231,28 +234,29 @@
                         <div class="card__back-side">
                             <ul class="card__descr">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
+                                </li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                             </ul>
                             <div class="card__back">НАЗАД</div>
                         </div>
-                   </div>
+                    </div>
                     <div class="card__divider"></div>
                     <div class="card__buy">
                         <div class="card__price">
                             <div class="card__old-price">4 750 руб.</div>
                             <div class="card__new-price">4 500 руб.</div>
                         </div>
-                        <button class="button button_buy">купить</button>
+                        <button class="button button_buy" data-modal="order">купить</button>
                     </div>
                 </div>
-                <div class="card card-triathlon">
-                   <div class="card__wrapper">
+                <div class="card card_triathlon">
+                    <div class="card__wrapper">
                         <div class="card__front-side">
                             <img src="img/pulsometer.jpg" alt="pulsometer" class="card__img">
-                            <div class="card__title">Пульсометр Polar FT1</div>
-                            <div class="card__about">Для первых шагов в тренировках, 
+                            <div class="card__title">Пульсометр Polar FT4</div>
+                            <div class="card__about">Для первых шагов в тренировках,
                                 основанных на сердечном ритме
                             </div>
                             <div class="card__more">ПОДРОБНЕЕ</div>
@@ -260,28 +264,33 @@
                         <div class="card__back-side">
                             <ul class="card__descr">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;
+                                </li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                                 <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                             </ul>
                             <div class="card__back">НАЗАД</div>
                         </div>
-                   </div>
+                    </div>
                     <div class="card__divider"></div>
                     <div class="card__buy">
                         <div class="card__price">
                             <div class="card__old-price">4 750 руб.</div>
                             <div class="card__new-price">4 500 руб.</div>
                         </div>
-                        <button class="button button_buy">купить</button>
+                        <button class="button button_buy" data-modal="order">купить</button>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
     <footer class="footer">
         <div class="footer__map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.4306549323906!2d37.64729640608719!3d55.76839196286203!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCAxMDcwNzg!5e0!3m2!1sru!2sru!4v1655662986148!5m2!1sru!2sru" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.4306549323906!2d37.64729640608719!3d55.76839196286203!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCAxMDcwNzg!5e0!3m2!1sru!2sru!4v1655662986148!5m2!1sru!2sru"
+                width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </div>
         <div class="footer__info">
@@ -295,6 +304,36 @@
         </div>
 
     </footer>
+
+    <div class="overlay">
+        <div class="modal" id="consultation">
+            <div class="modal__subtitle">Просто заполните форму заявки</div>
+            <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
+            <form class="feed-form feed-form-modal" action="#">
+                <input name="name" required type="text" placeholder="Ваше имя">
+                <input name="phone" required type="tel" placeholder="Ваш телефон">
+                <input name="email" required type="email" placeholder="Ваш E-mail">
+                <button type="submit" class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
+            <button class="modal__close"><img src="icons/close.png" alt="close"></button>
+        </div>
+        <div class="modal" id="order">
+            <div class="modal__subtitle">Ваш заказ:</div>
+            <div class="modal__descr">...</div>
+            <form class="feed-form feed-form-modal" action="#">
+                <input name="name" required type="text" placeholder="Ваше имя">
+                <input name="phone" required type="tel" placeholder="Ваш телефон">
+                <input name="email" required type="email" placeholder="Ваш E-mail">
+                <button type="submit" class="button button_submit">купить</button>
+            </form>
+            <button class="modal__close"><img src="icons/close.png" alt="close"></button>
+        </div>
+        <div class="modal modal_thanks" id="thanks">
+            <div class="modal__subtitle">Спасибо за вашу заявку!</div>
+            <div class="modal__descr">Наш менеджер свяжется с вами <br> в ближайшее время!</div>
+            <button class="modal__close"><img src="icons/close.png" alt="close"></button>
+        </div>
+    </div>
 </body>
 
 </html>
